--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <li>MongoDB</li>
       <li>Estrutura de Dados</li>
     </ul>
+    <article>
+      <p>Até então, escolher entrar na Trybe foi uma das melhores decisões que tive no último mês. Desde que ingressei, reaprendi muitos dos conhecimentos técnicos que já havia aprendido na faculdade, como HTML, CSS e protocolos de rede, mas de uma forma muito mais dinâmica e convidativa. Além disso, mesmo com esse pouco tempo, também aprendi a dar o devido valor às soft skills e como essas habilidades socioemocionais afetam o nosso dia a dia.</p>
+    </article>
     <footer id="rodape">
       <p>Criado por Natã Elienai, 2021.</p>
     </footer>
