--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     </div>
     <main>
       <img id="minha_foto" src="gilson.png" alt="foto de Gilson" />
+
+      <ol id="licoes_aprendidas">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
     </main>
   </body>
 </html>
