--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <li>Node</li>
         <li>SQL</li>
     </ul>
+    <article>
+       <p>
+        Meu aprendizado esta sendo muito bom. Através das técnicas de estudo, course, aula ao vivo e mentorias, estou conseguindo desenvolver a minhas habilidades em desenvolvimento Web e softskills. A metodologia da Trybe, nos direciona para um aprendizado em primeira pessoa, onde o protagonista é você, com isso me sinto seguro para encarar o mercado de trabalho de frente!
+       </p> 
+    </article>
     <footer id="rodape"></footer>
 </body>
 </html>
