Altercoes no layout da pagina

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
 
     <main class="container">
+      <!-- hero - Informações iniciais -->
       <div class="header">
         <figure class="figure">
           <img
@@ -36,23 +37,24 @@
         </p>
       </div>
 
-      <section>
+      <!-- about - Informações sobre o curso -->
+      <section class="lesson-learned">
         <h2>Coisas que eu já aprendi ate aqui:</h2>
         <ol id="licoes_aprendidas">
-          <li>Shell</li>
+          <li>Fundamentos do Desenvolvimento Web</li>
+          <li>Introdução - Unix & Shell</li>
+          <li>Unix & Bash</li>
+          <li>Introdução - Git & GitHub</li>
           <li>Git</li>
           <li>GitHub</li>
-          <li>Processos da internet</li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>Internet - Entendendo como ela funciona</li>
+          <li>Introdução - HTML & CSS</li>
+          <li>HTML - Estruturas de página</li>
+          <li>CSS - Primeiros passos em CSS</li>
         </ol>
       </section>
 
-      <section>
+      <section class="to-do"> 
         <h2>O que eu espero aprender</h2>
         <ul>
           <li></li>
@@ -68,7 +70,7 @@
         </ul>
       </section>
 
-      <article>
+      <article class=lado-esquerdo>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero
           beatae animi architecto, ullam at reiciendis laboriosam temporibus
@@ -80,7 +82,7 @@
         </p>
       </article>
 
-      <aside>
+      <aside class="lado-direito">
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates
           ut minima nam ipsum molestiae, odit porro? Eos officia sunt eligendi
@@ -88,6 +90,11 @@
           recusandae.
         </p>
       </aside>
+
+      <div class="clear"></div>
     </main>
+    <footer id="rodape" class="clear">
+      <p>&copy;Powered by <a href="http"></a></p>
+    </footer>
   </body>
 </html>
