applying header customize

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
     
     <header id="cabecalho">
-        <div>
-            <section>
+        <div class="container d_flex">
+            <section class="d_flex center_all">
                 <h1 id="titulo">Me</h1>
                 <img src="./coffee.svg" alt="home icon">
             </section>
 
             <section>
-                <nav>
-                    <ul>
-                        <li>About me</li>
-                        <li>Skills</li>
-                        <li>Contact</li>
+                <nav class="navbar navbar_header">
+                    <ul class="no_decoration">
+                        <li class="button">About me</li>
+                        <li class="button">Skills</li>
+                        <li class="button">Contact</li>
                     </ul>
                 </nav>
             </section>
