--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     <header id="cabecalho"><h1 id="titulo">Lições aprendidas - Trybe!</h1></header>
+    <main>
     <img src="foto_rosto.jpeg" alt="rosto" id="minha_foto">
+    <h2>Lições que aprendi e irei aprender:</h2>
+    <ol id="licoes_aprendidas">
+      <li>Zoom</li>
+      <li>Slack</li>
+      <li>Unix</li>
+      <li>Git</li>
+      <li>Github</li>
+      <li>HTML</li>
+      <li>HTML Semântico</li>
+      <li>CSS</li>
+      <li>Chrome Devoloper Tools</li>
+      <li>Inteligência emocional</li>
+    </ol>
+    </main>
 </body>
 </html>
