Esquelo do site completo

--- a/index.html
+++ b/index.html
@@ -11,12 +11,69 @@
     
     <header id="cabecalho">
         <h1 id="titulo">Header</h1>
+
+        <nav>
+            <li>Home</li>
+        </nav>
     </header>
 
     <main>
         <section>
+            <img id="minha_foto" src="" alt="">
+
+            <section class="licoes">
+                <h1>Lições que ja aprendi</h1>
+                <ol id="licoes_aprendidas">
+                    <li>HTML - Links externos e internos</li>
+                    <li>Introdução ao CSS</li>
+                    <li>Propriedades de texto no CSS</li>
+                    <li>CSS inline e externo</li>
+                    <li>Combinações e Classes Descendentes</li>
+                    <li>Agrupamento de Seletores e Pseudoclasses</li>
+                    <li>Posicionamento de Elementos</li>
+                    <li>Box Model - Modelo de caixas no CSS</li>
+                    <li>Aplicando elementos HTML de acordo com o sentido</li>
+                    <li>Elementos de bloco e elementos inline</li>
+                </ol>
+            </section>
+
+        <section class="licoes">
+            <h1>Lições que ainda vou aprender</h1>
+            <ul id="licoes_a_aprender">
+                <li>O que é MVC?</li>
+                <li>Implementação de uma deque utilizando Python</li>
+                <li>Quais as operações mais comuns?</li>
+                <li>O que é uma deque?</li>
+                <li>Nó</li>
+                <li>O que é uma Lista Encadeada?</li>
+                <li>Quais as operações mais comuns?</li>
+                <li>Encadeamento duplo</li>
+                <li>Implementação de um Node</li>
+                <li>Implementação de uma LinkedList</li>
+            </ul>
+        </section>
 
         </section>
+
+        <article>
+            <p>Nesse pouco tempo na trybe já aprendi tantas coisas, aprendi a usar o HTML Sematic fazendo com que meus códigos sejam cada vez mais legíveis
+                aprendi a manipular o posicionamento dos elementos em HTML além do hard skill aprendi muito coisa em soft skill a controlar minhas emoções
+                olhar para mim e não para os outros pensar no meu desempenho olhar para o Luiz de ontem e o Luiz de hoje e ver que estou sempre em desenvolvimento.
+            </p>
+        </article>
+
+        <aside>
+            <p>
+                Nesse pouco tempo na trybe já aprendi tantas coisas, aprendi a usar o HTML Sematic fazendo com que meus...
+            </p>
+        </aside>
+
+        <a href="https://www.google.com" target="_blank">Ir para o Site Google</a>
     </main>
+
+    <footer id="rodape">
+        <p>Copyright © e todos os Direitos Reservados para agência de branding | <a href="https://github.com/ProHatp">Luiz Wanderson</a> ®</p>
+    </footer>
+
 </body>
 </html>
