--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
         <li>Node</li>
         <li>SQL</li>        
     </ul>
+    <footer>
+       <p id="rodape">Criado por Gabriel Bins</p>
+    </footer>
 </body>
 </html>
