--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			<li>Desenvolvimento Front-end.</li>
 			<li>Desenvolvimento Back-end.</li>
 		</ul>
+		<p>Caso tenha se interessado pelo aprendizado clique <a href="https://www.betrybe.com/" target="_blanck">aqui!</a></p>
 	</main>
 	<footer id="rodape"></footer>
     
