--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
             <p>O curso na <b>Trybe</b> tem se mostrado a melhor escolha que eu fiz nos 
                 ultimos tempos. Os professores são ótimos, a didática perfeita e é dado ao
                 aluno a oportunidade de realmente aprender com os melhores.</p>
+                
             <p>Além disso, o curso também conta com um suporte sempre ativo, com mentores
                 sempre dispostos a ajudar e um ambiente muito pacífico, onde o aluno é estimulado
                 a sempre questionar e nunca ter medo de perguntar se algo causou dúvida.
-            </p>              
+            </p>
+            <aside>
+                O aprendizado não é moleza! Todo o dia têm muito conteúdo e exercícios. É necessário
+                sempre dedicação do aluno pra conseguir se manter a par de todo o conteúdo apresentado.
+            </aside>              
         </article>
+        
     </main>
     <footer id="rodape"><b><a href="https://www.github.com/leboralli" 
         id="link-externo">Github</a> </b></footer>
