--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             <p>Eu passei por muitos lugares até chegar onde estou hoje. Algumas pessoas são sortudas e descobrem desde cedo o que amam e o que querem fazer da vida, mas eu, infelizmente (ou felizmente), não fui uma delas. Dei algumas voltas até decidir que gostava tanto de tecnologia a ponto de querer estudar e fazer disso uma profissão.</p> 
             <p>Se eu me arrependo? Nem um pouco. Todo o conhecimento que eu puder adquirir ainda será pouco comparado ao tamanho da minha vontade de aprender.</p> 
         </article>
+
+        <aside>
+            <p>A aprendizagem demanda tempo e disciplina, e isso eu só aprendi com o tempo - ou seja, errando e aprendendo. Esse processo é fundamental</p>
+        </aside>
     </main>
 
     <footer id="rodape">
