--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="#artigo_principal">Minha jornada</a></li>
           <li><a href="#quick_fact">Quick fact!</a></li>
           <a target="_blank" href="https://israelss.github.io"
-            >Visite meu site</a
+            >Visite meu site (new window)</a
           >
         </ul>
       </nav>
