--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <li>Node</li>
         <li>SQL</li>        
     </ul>
+    <a href="https://github.com/gabrielbins" target="_blank">GitHub</a>
     <footer>
        <p id="rodape">Criado por Gabriel Bins</p>
     </footer>
