--- a/index.html
+++ b/index.html
@@ -38,8 +38,15 @@
             </ul>
         </article>
     </main>
+    <aside>
+        <p>
+            Enquanto aprendo desenvolvimento web busco aprender mais sobre a linguagem Unix e gerenciamento de pacotes, tenho como meta realizar e usar o sistema Arch Linux
+        </p>
+    </aside>
     <footer id="rodape">
-        <a href="https://github.com/irbds" target="_blank">Meu GitHub</a>
+        <nav>
+            <a href="https://github.com/irbds" target="_blank">Meu GitHub</a>
+        </nav>
     </footer>
 </body>
 </html> 
