--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <main>
         <img src="me.jpeg" alt="photo of matheus nugas" width="125px" id="minha_foto">
-        <div>
+        <div class="licoes">
             <ol id="licoes_aprendidas">
                 <h4>Lições Aprendidas</h4>
                 <li>Soft skills</li>
@@ -56,7 +56,7 @@
                 <li>NodeJS</li>
             </ul>
         </div>
-        <div>
+        <div class="artigos">
             <article id="lado-esquerdo">
                 <h2>Como foi até agora</h2>
                 <p>
