--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
           </section>
         <div>
           <footer id="rodape">
+              <table>
+                  <h2>Objetivos</h2>
+                  <tr>
+                      <td>Conseguir terminar sem pendências</td>
+                      <td>Arrumar um emprego depois do modulo de Back-end</td>
+                      <td>Criar uma rede de Network</td>
+                      <td>Trabalhar nos meus pontos fracos</td>
+                  </tr>
+              </table>
           </footer>
         </div>
     </main>
