--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
+    <title> Primeiro Projeto!</title>
   </head>
 
   <body>
@@ -16,7 +17,7 @@
         
             <p class="main-text"> <img src="minha-foto.jpeg" alt="Foto de Lucas Lopes de Moura" id="minha_foto">
             A TV Senado está ao vivo no YouTube de segunda à sexta-feira, das 8h às 21h. Por aqui você acompanha os debates e as votações do Senado e do Congresso Nacional e assiste à cobertura jornalística completa das atividades legislativas, além de entrevistas, documentários e programas especiais.
-            A TV Senado está ao vivo no YouTube de segunda à sexta-feira, das 8h às 21h. Por aqui você acompanha os debates e as votações do Senado e do Congresso Nacional e assiste à cobertura jornalística completa das atividades legislativas, além de entrevistas, documentários e programas especiais.
+            A TV Senado está ao vivo no YouTube de segunda à sexta-feira, das 8h às 21h.
             </p>
      
     </article>
@@ -58,7 +59,7 @@
     </section>
 
     <aside class="passagem-aprendizado"> <h2>Crie uma seção que conta uma passagem sobre seu aprendizado</h2>
-        <p>A seção deverá possuir mais de 100 caracteres e menos de 300, além disto deve possuir a tag aside.<br>A seção deverá possuir mais de 100 caracteres e menos de 300, além disto deve possuir a tag aside.<br>A seção deverá possuir mais de 100 caracteres e menos de 300, além disto deve possuir a tag aside.</p>
+        <p>A seção deverá possuir mais de 100 caracteres e menos de 300, além disto deve possuir a tag aside.<br>A seção deverá possuir mais de 100 caracteres e menos de 300, além disto deve possuir a tag aside.</p>
 
 
     </aside>
