--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <h1 id="titulo">Lessons Learned - Trybe</h1>
   </header>
   <div>
-      <img id="minha_foto" class="minha_foto" src="foto.jpg" alt="foto de perfil">
+      <img id="minha_foto" class="minha_foto" src="foto.jpeg" alt="foto de perfil">
   </div>
   <div>
       <ol id=licoes_aprendidas>
@@ -28,5 +28,20 @@
         <li>Empatia</li> 
       </ol>
   </div>
+  <div>
+      <ul id="licoes_a_aprender">
+          <li>JavaScipt</li>
+          <li>SQL</li>
+          <li>Node</li>
+          <li>React</li>
+          <li>Unit Test</li>
+          <li>HOF</li>
+          <li>CSS Responsive</li>
+          <li>DOM</li>
+          <li>ES6</li>
+          <li>Forms</li>
+      </ul>
+  </div>
+  <footer id="rodape"></footer>
 </body>
 </html>
