--- a/index.html
+++ b/index.html
@@ -10,8 +10,34 @@
 <div id="cabecalho">
     <h1 id="titulo">Título </h1>
 </div>
-<img id="minha_foto" src="celso.jpg" alt="Minha foto no trabalho">
+    <img id="minha_foto" src="celso.jpg" alt="Minha foto no trabalho">
+<div>
+<ul id="licoes_aprendidas"> 
+    <li>Unix </li>
+    <li>Bash</li>
+    <li>Html</li>
+ <li> Css</li> 
+ <li>Internet</li>
+  <li>Softskills</li>
+   <li>Git</li>  
+   <li>GitHub</li> 
+   <li>Slack</li>
+ <li>O jeito tryber de ser</li> 
 
+ <ul>
+    <li>Java</li>
+    <li>JavaScript</li>
+    <li>React</li>
+ <li> Lógica de Programação</li> 
+ <li>DOM</li>
+  <li>Eventos</li>
+   <li>Web Storage</li>  
+   <li>Forms</li> 
+   <li>Flexbox</li>
+ <li>JavaScript ES6</li>   
+ </ul> 
+</ul>
+</div>
 
 
 
