--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1 id="titulo">titulo</h1>
   </header>
   <img id="minha_foto" src="fredi-wilkens.jpeg" alt="foto de Frederico Wilkens de frente e sorrindo">
+  
   <ol id="licoes_aprendidas">
     <li>Unix</li>
     <li>Bash</li>
@@ -39,6 +40,7 @@
   </ul>
 
   <footer id="rodape">
+    <a href="https://www.linkedin.com/in/frederico-wilkens/" target="_blank">Linkedin</a>
   </footer>
 
 </body>
