--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header id="cabecalho"><h1 id="titulo">Lessons Learnd</h1></header>
+    <img id="minha_foto" src="rsz_imagem2.jpg" alt="garota de óculos com livros no fundo" width="300px">
         
 </body>
 </html>
