--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         </article>
     </main>
     <aside>
+        <section>
+            <h4>Meu Aprendizado</h4>
+        </section>
         <p>
             Enquanto aprendo desenvolvimento web busco aprender mais sobre a linguagem Unix e gerenciamento de pacotes, tenho como meta realizar e usar o sistema Arch Linux
         </p>
