--- a/index.html
+++ b/index.html
@@ -45,5 +45,12 @@
   </footer>
   <!--7. Insira pelo menos um link externo na página-->
   <a href="https://github.com/GabrielFMPinheiro" target="_blank">GitHub</a>
+  <!--8. Crie um artigo sobre seu aprendizado-->
+  <article>
+    <section>
+      <h2>Meu aprendizado na Trybe</h2>
+      <p>A Trybe apresenta um jeito único de fazer a gente aprender, aqui nós não nos desenvolvemos somente para serem programadores, mas sim, tudo que um verdadeiro profissional precisa possuir, como resiliência, respeito e preocupação pelo próximo. Vale afirmar também, que a ela nos fornece um material incrível, bem detalhado e com um nível além do básico. Além disso, conta com uma equipe de funcionários sensacional,que prestam apoio para todos independente do problema.</p>
+    </section>
+  </article>
 
 </body>
