--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <header id="cabecalho">
         <h1 id="titulo">Trabalho do Brunão</h1>
     </header>
+    <img src="imagens/eu.jpg" alt="eu" id="minha_foto">
 </body>
 </html>
+
