--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
         </aside>      
     </main>
 
+    <section>
+        <h5>Objetivos para o projeto</h5>
+        <table>
+            <tr>
+                <th>Projeto</th>
+                <th>Requisitos para aprovar</th>
+                <th>Quanto quero atingir</th>
+            </tr> 
+            <tr>
+                <td>Lessons Learned</td>
+                <td>80%</td>
+                <td>100%</td>
+            </tr> 
+        </table>
+    </section>
+
     <footer id="rodape">
         Todos os direitos reservados - Airton Lopes
     </footer>
