--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   </header>
   <img id="minha_foto" src="fredi-wilkens.jpeg" alt="foto de Frederico Wilkens de frente e sorrindo">
   
+  <article>
+    <h3>Sobre meu aprendizado</h3>
+    <p>Iniciei minha jornada na Trybe através do processo seletivo e do curso introdutório chamado Primeiros Passos na Programação onde pude ver o básico do JavaScript e aprender sobre lógica de programação. Após iniciar de fato no curso já aprendi diversos conteúdos, o mais importante é que sigo sendo estimulado pela Trybe a ir além do conteúdo apresentado e aprender a aprender. Não tem sido uma caminhada tranquila, pois tudo é muito novo e complexo, mas muito gratificante de continuar avançando.</p>
+  </article>
+
   <ol id="licoes_aprendidas">
     <li>Unix</li>
     <li>Bash</li>
