--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
             </section>
         </article>
     </main>
+    <footer id="rodape">
+        <h1>Kevin Sena</h1>
+    </footer>
 </body>
 </html>
