--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
                 </ul>
             </div>
             
+            <a href="https://github.com/NathaliaMagi">Meu GitHub</a>
         <!------------ BARRA LATERAL ------------>
         </main>
 
-        <foote id="rodape"></foote>
+        <footer id="rodape">Rodape</footer>
     </body>
 </html>
