--- a/index.html
+++ b/index.html
@@ -55,6 +55,29 @@
 
 <a href="https://www.betrybe.com/" target="_blank">TRYBE  (opens in new window)</a>
 
+<table class="aulas">
+    <tr>
+      <th>Bloco</th>
+      <th>Aulas</th>
+      <th>Dias</th>
+    </tr>
+    <tr>
+      <td>1. Unix & BASH</td>
+      <td>1.3 e 1.4</td>
+      <td>11 e 12 de ago</td>
+    </tr>
+    <tr>
+      <td>2. Git, GITHUB e Internet</td>
+      <td>2.1, 2.2, 2.3</td>
+      <td>13, 16 e 17 de ago</td>
+    </tr>
+    <tr>
+        <td>3. Introdução à HTML & CSS</td>
+        <td>3.1, 3.2, 3.3, 3.4 e Projeto</td>
+        <td>18, 19, 20, 23 e 24 de ago</td>
+      </tr>
+  </table>
+
 <footer id="rodape" class="footer">
 Criado por Victor Shin Kamiguchi
 </footer>
