--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <img src="minha_foto.jpg" alt="garoto sorrindo" id="minha_foto">
      
      <main>
-         <section id= "section_1">
+         <section id= "section_list">
             <h2>Lições aprendidas</h2>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
@@ -27,6 +27,7 @@
                 <li>Zoom</li>
                 <li>HTML semântico</li>
                 <li>Internet</li>
+                <li>Emoções</li>
             </ol>
         </section>
 
