--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Lesson Learned</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+   <div id="cabecalho">
+       <h1 id="titulo">Olá meu nome é Izabela</h1>
+   </div>   
   </body>
 </html>
