--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <h1 id="titulo">Meu Primeiro Projeto</h1>
         </header>
         
+        <img id="minha_foto" src="/IMG_9102.jpg" alt="Foto de Everton Curti">
         
 
     </body>
