lista de licoes aprendidas

--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
     </header>
     <main>
       <img id="minha_foto" alt="Gabriel de casaco amarelo" src="foto.jpeg">
+      <hr>
+      <section>
+        <h2>Lições Aprendidas</h2>
+        <ol id="licoes_aprendidas">
+          <li>Bash</li>
+          <li>Git e GitHub</li>
+          <li>SoftSkills</li>
+          <li>Disciplina</li>
+          <li>Colaboração</li>
+          <li>Boas práticas</li>
+          <li>Lógica de programação</li>
+          <li>Html (superficialmente)</li>
+          <li>Css (superficialmente)</li>
+          <li>Html semântico</li>
+        </ol>
+      </section>
     </main>
   </body>
 </html>
