--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </ul>
             </div>
             
-            <a href="https://github.com/NathaliaMagi">Meu GitHub</a>
+            <a href="https://github.com/NathaliaMagi" target="_blank">Meu GitHub</a>
         <!------------ BARRA LATERAL ------------>
         </main>
 
