--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 		<li>Algoritmos</li>
 	</ul>
 
+	<article>
+		<h2>Aprendizado na Trybe</h2>
+		<p>O meu aprendizado na Trybe está sendo muito incrivel, apesar da rotina intensa, sinto que estou absorvendo muito bem todo o conteúdo passado. Isso graças ao meu esforço e também a toda estrutura, equipes e conteúdo didático que a Trybe nos proporciona. O primeiro módulo está bem tranquilo por eu já ter uma base de HTML e CSS, porém foi possível aprender muitos conteúdos novos e aprimorar ainda mais esse conhecimento. </p>
+	</article>
+
 	<footer id="rodape">
 
 	</footer>
