--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
   <header id="cabecalho" class="header">
           <h1 id="titulo">Lessons Learned - Trybe</h1>
+          <nav>
+              <a href="https://github.com/melobrunoti" target="_blank">Github</a>
+          </nav>
   </header>
   <div>
       <img id="minha_foto" class="minha_foto" src="foto.jpeg" alt="foto de perfil">
