Conserta a funcionalidade dos requisitos 8, 9 e 10 e termina o requisito 11

--- a/index.html
+++ b/index.html
@@ -36,10 +36,33 @@
                 <li> lorem ipsum  </li>
                 <li> lorem ipsum  </li>
                 <li> lorem ipsum  </li>
-                <li> lorem ipsum  </li>
-                
+                <li> lorem ipsum  </li> 
             </ul>
         </div>
+
+        <nav> 
+            <a href="https://www.chess.com/member/windowstuck">site bala de xadrez x1 bpra</a>
+        </nav>
+         
+         <article>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Mollis nunc sed id semper risus in hendrerit gravida rutrum. Sit amet dictum sit amet justo donec enim diam vulputate. 
+            Mauris a diam maecenas sed. Curabitur gravida arcu ac tortor dignissim convallis aenean et tortor. Lectus quam id leo in vitae turpis massa sed elementum. 
+            Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a. t.</p>
+         </article>
+
+         <aside>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+            Mollis nunc sed id semper risus in hendrerit gravida rutrum.</p>
+         </aside>
+
+         <section>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Mollis nunc sed id semper risus in hendrerit gravida rutrum. Sit amet dictum sit amet justo donec enim diam vulputate. 
+            Mauris a diam maecenas sed. Curabitur gravida arcu ac tortor dignissim convallis aenean et tortor. Lectus quam id leo in vitae turpis massa sed elementum. 
+            Mi in nulla posuere sollicitudin aliquam ultrices sagittis orci a. t.</p>
+         </section>
+
         <footer id="rodape">
           <a href="https://www.chess.com/member/windowstuck" target="_blank"> perfil no chess.com do pai vamo tirar x1 </a>
         </footer>
