--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <article>
       <p>Até então, escolher entrar na Trybe foi uma das melhores decisões que tive no último mês. Desde que ingressei, reaprendi muitos dos conhecimentos técnicos que já havia aprendido na faculdade, como HTML, CSS e protocolos de rede, mas de uma forma muito mais dinâmica e convidativa. Além disso, mesmo com esse pouco tempo, também aprendi a dar o devido valor às soft skills e como essas habilidades socioemocionais afetam o nosso dia a dia.</p>
     </article>
+    <aside>
+      <p>Iniciei a minha jornada na Trybe já aprendendo sobre o sistema operacional Unix e o Bash, um dos shells mais populares. Logo depois passei por Git e GitHub, aprendendo sobre os seus comandos e suas funcionalides essenciais, chegando até o bloco atual, que trata de HTML e CSS.</p>
+    </aside>
     <footer id="rodape">
       <p>Criado por Natã Elienai, 2021.</p>
     </footer>
