--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,17 +15,31 @@
       <img id="minha_foto" src="gilson.png" alt="foto de Gilson" />
 
       <ol id="licoes_aprendidas">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Unix & Bash</li>
+        <li>Git & Github</li>
+        <li>Github Pages</li>
+        <li>CSS Inline & Externo</li>
+        <li>CSS Box Model</li>
+        <li>HTML</li>
+        <li>Html Semântico</li>
+        <li>Modelo cliente–servidor</li>
+        <li>Protocolo HTTP</li>
+        <li>Slack</li>
       </ol>
+
+      <ul id="licoes_a_aprender">
+        <li>Javascript</li>
+        <li>DOM</li>
+        <li>EVentos</li>
+        <li>Web Storage</li>
+        <li>Flexbox</li>
+        <li>CSS Responsivo</li>
+        <li>Testes Unitários</li>
+        <li>React</li>
+        <li>Metodologias Ágeis</li>
+        <li>Testes Automatizados</li>
+      </ul>
+
     </main>
   </body>
 </html>
