--- a/index.html
+++ b/index.html
@@ -5,19 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lessons Learned</title>
+    <title>Lições aprendidas | Trybe</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Lessons Learned</h1>
+        <h1 id="titulo">Lições aprendidas - Trybe</h1>
     </header>
 
-    <section id="foto_section" class="lado-esquerdo">
-        <img id="minha_foto" src="http://grazziano.space/img/60292620_2156558624461684_6812711201185726464_o.jpg"
-            alt="Foto de Grazziano">
+    <section id="foto_section">
+        <div class="foto">
+            <img id="minha_foto" src="http://grazziano.space/img/60292620_2156558624461684_6812711201185726464_o.jpg"
+                alt="Foto de Grazziano">
+        </div>
     </section>
+
+    <article>
+        <div class="lista_ordenada">
+            <h2>Lições aprendidas</h2>
+            <ol id="licoes_aprendidas">
+                <li>Fundamentos do Desenvolvimento Web</li>
+                <li>Unix & Shell</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Internet: Endetendo como ela funciona</li>
+                <li>Introdução: HTML & CSS</li>
+                <li>HTML & CSS: Estrutura de página</li>
+                <li>HTML & CSS: Primeiros passos em CSS</li>
+                <li>HTML & CSS: Seletores e posicionamento</li>
+                <li>HTML Semântico</li>
+            </ol>
+        </div>
+    </article>
+
+
 </body>
 
 </html>
