add footer and external link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li>Posicionamento</li>
         <li>Semantic HTML</li>
       </ol>
-      
+
       <ul id="licoes_a_aprender">
         <li>Javascript</li>
         <li>DOM</li>
@@ -43,5 +43,10 @@
       </ul>      
     </div>
   </div>
+  <footer class="text-center" id="rodape">
+    <p>
+      made with ❤️ by <a href="http://github.com/marcioecom" target="_blank">Márcio Júnior</a>
+    </p>
+  </footer>
 </body>
 </html>
