--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
     <img id="minha_foto" src="Minhafoto.jpg" alt="Foto De Rafael Santos">
     </div>
-    <a href="https://oieusouopi.github.io/" target="_blank">afael Santos</a>
+    <a href="https://oieusouopi.github.io/" target="_blank">Rafael Santos</a>
     <div>
     <h2>Lições</h2>
     <ol id="licoes_aprendidas">
@@ -43,6 +43,21 @@
         <li>SQL</li>
     </ul>
     </div>
+    <article>
+        <h2>Aprendizado</h2>
+        <p>Na trybe eu estou tendo uma experiência unica de aprendizado<br>
+        aumentando meu conhecimento em desenvolvimento na web e como <br>
+        desenvolvedor visando futuramente ter uma melhor carreira e ser<br>
+        capacitado a fazer o que for pedido no meu emprego e podendo ir além<br>
+        daquilo que for pedido com uma esperança de poder surprender as pessoas<br>
+        na qual eu estou trabalhando naquela empresa.</p>
+    </article>
+    <aside>
+        <h2>Um Momento que ocorreu durante meu aprendizado</h2>
+        <p>Os momentos de softskills melhoram bastante a interação entre os alunos<br>
+        e um dos momentos que mais me impactou foi o de simpatia e empatia que trouxe <br>
+        a diferença dos dois.</p>
+    </aside>
     <footer id="rodape"></footer>
 </body>
 </html>
