--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </body>
 </html>
 
-<!-- Requisitos -->
+<!-- Requisitos : https://github.com/tryber/sd-016-b-project-lessons-learned-->
 <!-- Barra superior position: fixed; https://www.w3schools.com/css/css_positioning.asp -->
 <!-- 01 - Cor do fundo da página rgb(253, 251, 251) -->
 <!-- 02 - Barra Superior fixed e top:0 com o título id="cabecalho" e h1 id="titulo" -->
