--- a/index.html
+++ b/index.html
@@ -37,7 +37,20 @@
 			<li>Desenvolvimento Front-end.</li>
 			<li>Desenvolvimento Back-end.</li>
 		</ul>
-		<p>Caso tenha se interessado pelo aprendizado clique <a href="https://www.betrybe.com/" target="_blanck">aqui!</a></p>
+		<article>
+			<p>A Trybe é uma escola do futuro para qualquer pessoa que queira melhorar
+			de vida e construir uma carreira de sucesso em tecnologia, onde a pessoa
+			paga quando conseguir um bom trabalho.
+			<br>
+			<br>
+			O programa conta com mais de 1.500 horas de aulas presenciais e online, aborda introdução ao desenvolvimento de software, front-end, back-end, ciencia da computação, engenharia de software, metodologias ageis e habilidades comportamentais.</p>
+		</article>
+		 <a href="https://www.betrybe.com/" target="_blanck">Caso tenha se
+		 interessado pelo aprendizadoclique aqui!</a>
+		 <aside>
+			 <p>O processo de aprendizado na Trybe é um dos melhores que já
+			 experimenatei a metodologia aplicada é incrivel!</p>
+		 </aside>
 	</main>
 	<footer id="rodape"></footer>
     
