--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     
 
     <nav>
-
+        <a href="https://www.linkedin.com/in/mariana-saraiva-977a251b3/" target="_blank">LindedIn</a>
+        <a href="https://github.com/marianasaraiva" target="_blank">Github</a>
     </nav>
 
 
@@ -50,19 +51,19 @@
     </section>
 
     <article>
-
+        <h2>Meu aprendizado</h2>
+        <p>Quem diria que em apenas duas semanas fossem acontecer tantas transformações na minha vida. Se alguém me falasse que ao entrara na Trybe eu reconheceria a missão e a visão de forma tão acolhedora, e que essa ação me traria paz. Hoje sou uma pessoa melhor, e acredito que esse seja o propósito principal. As Hards skllis são meu novo desafio diário, mas hoje posso dizer que começa a fazer sentindo algumas questões de Git e Github, HTML e CSS. É uma grande vitória! Só sei que agora não quero parar. Vamos, que juntos somos mais fortes.</a></p>
     </article>
 
-
-
-
     <aside>
-
+        <h2>Aprendizados</h2>
+        <p>As Hards skllis são meu novo desafio diário, mas hoje posso dizer que começa a fazer sentindo algumas questões de Git e Github, HTML e CSS. É uma grande vitória! 
+        </p>
     </aside>
 
 
     <footer id="rodape">
-
+        <h4>Conteúdo produzido por Mariana Saraiva em parceria com Trybe, 2021</h4>
     </footer>
 
 
