lista de licoes aprendias e nao aprendidas + ID's

--- a/index.html
+++ b/index.html
@@ -8,8 +8,36 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo"></h1>
+        <h1 id="titulo">Projeto01</h1>
     </header>
+    <section>
+        <img src="" alt="">
+        <h2>Lições</h2>
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Empatia</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Slack</li>
+            <li>Zoom</li>
+            <li>Inspect</li>
+            <li>Semantic HTML</li>
+        </ol>
+        <ol id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS Responsive</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Test</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+        </ol>
+    </section>
 
     
 </body>
