--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <header id="cabecalho"> 
         <h1 id="titulo">Título</h1>
+        <nav>
+            <ul id="navegacao">
+            <li>Página Inicial</li>
+            <li>Links</li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
@@ -47,9 +53,15 @@
             <p>
                 Essas semanas de curso foram recheadas de conteúdos novos, começou devagar com explicações básicas sobre o sistema Unix, sobre o que é a internet, o que seria uma página web, até o momento em que chegou a explicação do Git,GitHub,HTML e CSS, após isso que as coisas começaram a melhorar, pois deu para ver em tempo real o aprendizado ser absorvido.
             </p>
-        </article>
+            </article>
+            <aside>
+                <p>
+                    Uma das melhores decisões que eu tive foi migrar de engenharia química para programação, não tenho nenhum arrependimento, muito pelo contrário, estou super ansioso para aprender mais e mais.
+
+                </p>
+            </aside>
     </main>
-    <a href="https://www.linkedin.com/in/felipesanchesm/" target="_blank">Meu Linkedin</a>
+    <a href="https://www.linkedin.com/in/felipesanchesm/" target="_blank">Meu Linkedin (open in new window)</a>
     <footer id="rodape">
         <hr>
         <p>Todos Os Direitos Reservados, Felipe Sanches Meirelles</p>
