--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
     </section>
     <article>
         <p>O primeiro assunto que foi abordado no curso de Desenvolvimento Web na <a href="https://www.betrybe.com/formacao-desenvolvimento-web" target="_blank" rel="noreferrer">Trybe</a> foi sobre os sistemas baseados em Unix. No primeiro momento senti que nunca iria conseguir entender o conteúdo, mas com o passar do tempo, controlei a ansiedade e compreendi aos poucos que tudo tem um sentido. O que me ajudou bastante foi o momento em que pratiquei as navegações e configurações no terminal do Linux.</p>
+        <section>
+            <aside id="meu_aprendizado">
+                As aulas na <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer">Trybe</a> não são fáceis. Depois da minha primeira semana, fui capaz de perceber que apenas o horário normal de aula não seria o suficientes, apesar das aulas serem bem didáticas.
+            </aside>
+        </section>
     </article>
     <footer id="rodape">
         <p>Página criada com a intenção de praticar o que estou aprendendo enquanto um <a href="https://www.betrybe.com/" target="_blank" rel="noreferrer">Tryber</a>.</p>
