--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </ul>
 </div>
 
-<footer id="rodape"> Rodapé</footer>
+<footer id="rodape"><a link href="http://betrybe.com" target="_blank"> Clique aqui </link></a> e conheça a Trybe    </footer>
 
 
 
