--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Lessons Learned</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Lessons Learned</title>
 </head>
 <body>
-    
+  <header id="cabecalho">
+    <h1 id="titulo"> Lessons Learned</h1>
+  </header>
+  <main>
+    <img id="minha_foto" src="img/orlando.jpg" alt="homem em um shopping">
+    <section>
+      <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Shell</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Internet</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>VSCode</li>
+        <li>Boas práticas em equipe</li>
+        <li>Slack</li>
+      </ol>
+    </section>
+  </main>
 </body>
 </html>
