--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <article>
             <img id="minha_foto" src="./perfil.jpeg" alt="Minha foto">
+            <a href="https://github.com/KevinSena" target="_blank">Kevin Sena</a>
             <section>
                 <h3>Lições</h3>
                 <ol id="licoes_aprendidas">
@@ -44,7 +45,7 @@
         </article>
     </main>
     <footer id="rodape">
-        <h1>Kevin Sena</h1>
+        <h1>Todos os direitos reservados, Kevin Sena</h1>
     </footer>
 </body>
 </html>
