--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Primeiro projeto na Trybe | Breno Tainan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,5 +13,18 @@
     </header>
 
     <img id="minha_foto" src="/breno-perfil.jpg" alt="Foto de Breno Tainan em frente ao espelho, ele está vestido como uma blusa branca e está segurando um celular.">
+
+    <ol id="licoes_aprendidas">
+        <li>Zoom</li>
+        <li>Slack</li>
+        <li>Unix</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Html</li>
+        <li>CSS</li>
+        <li>Autoconhecimento</li>
+        <li>Empatia</li>
+        <li>Html semântico</li>
+    </ol>
 </body>
 </html>
