--- a/index.html
+++ b/index.html
@@ -11,5 +11,20 @@
         <h1 id="titulo">Lessons Learned [Projeto]</h1>
     </header>
     <img id="minha_foto" src="myPhoto.jpeg" alt="Minha foto">
+    <main>
+      <h2>Alguns aprendizados deste começo de Trybe:</h2>
+      <ol id="licoes_aprendidas">
+        <li>Unix e SO's que o usam como base.</li>
+        <li>Como o Hardware se comunica com o Software através do Kernel.</li>
+        <li>Versionar arquivos usando o Git.</li>
+        <li>Usar um repositório remoto, no caso, GitHub.</li>
+        <li>O funcionamento da Internet como um todo.</li>
+        <li>Estruturar uma página em HTML.</li>
+        <li>Estilizar uma página usando o CSS.</li>
+        <li>Usar o HTML Semântico e seus benefícios.</li>
+        <li>A importância de trabalhar sua saúde mental e inteligência emocional.</li>
+        <li>Saber expressar minhas opiniões em equipe.</li>
+      </ol>
+    </main>
   </body>
 </html>
