--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div>
     <img id="minha_foto" src="Minhafoto.jpg" alt="Foto De Rafael Santos">
     </div>
+    <nav>
     <a href="https://oieusouopi.github.io/" target="_blank">Rafael Santos</a>
-    <div>
+    </nav>
+    <section>
     <h2>Lições</h2>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
@@ -28,8 +30,8 @@
         <li>HTML Semântico</li>
         <li>VSCode</li>
     </ol>
-    </div>
-    <div>
+    </section>
+    <section>
     <ul id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>DOM</li>
@@ -42,7 +44,7 @@
         <li>Context API</li>
         <li>SQL</li>
     </ul>
-    </div>
+    </section>
     <article>
         <h2>Aprendizado</h2>
         <p>Na trybe eu estou tendo uma experiência unica de aprendizado<br>
