--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <article>
         <p>Entrei na Trybe tem quase 3 semanas, e o aprendizado tem sido fantástico, o curso requer bastante foco e compromisso, essa forma de ensino ativo aonde todo dia é colocado em prática o que é aprendido, é um diferencial enorme, os professores e responsáveis passam o conteudo de uma forma bem compreensível, tenho gostado muito dessa nova fase de aprendizado.</p>
     </article>
+    <aside>
+        <p>O aprendizado na trybe tem sido grande, desde a parte dar hard skills que é a parte de programação em si, como a parte de soft skills, é um diferencial enorme.</p>
+    </aside>
     <a href="https://github.com/gabrielbins" target="_blank">GitHub</a>
     <footer>
        <p id="rodape">Criado por Gabriel Bins</p>
