--- a/index.html
+++ b/index.html
@@ -8,21 +8,42 @@
   <title>Project - Lessons Learned</title>
 </head>
 <body>
-  <header> 
-    <h1 class="titulo">Lições Aprendidas! - Trybe - Projeto</h1>
-    <nav class="cabecalho">
-      <ul>
-        <li>Home</li>
-        <li>Login</li>
-        <li>MDN</li>
-      </ul>
-    </nav>
+  <header class="cabecalho"> 
+      <h1 class="titulo">Lições Aprendidas! - Trybe - Projeto</h1>
   </header>
   <main>
-    <img class="minha_foto" src="https://ialamov.github.io./images/WhatsApp%20Image%202021-03-02%20at%2015.09.07.jpeg" alt="Foto de perfil de Douglas Ialamov">
-    <ul>
-      <li></li>
+    <div>
+      <img class="minha_foto" src="https://ialamov.github.io./images/WhatsApp%20Image%202021-03-02%20at%2015.09.07.jpeg" alt="Foto de perfil de Douglas Ialamov">
+    </div>
+    <section>
+    <ol class="licoes_aprendidas">
+      <li>HTML</li>
+      <li>Tags</li>
+      <li>Semântica</li>
+      <li>CSS</li>
+      <li>Display</li>
+      <li>Background</li>
+      <li>Seletores e Posicionamento</li>
+      <li>Estrutura de páginas de HTML</li>
+      <li>Unix & Bash</li>
+      <li>Git, Github e Internet</li>
+    </ol>
+    <ul class="licoes_aprendidas">
+      <li>Rest</li>
+      <li>JavaScript</li>
+      <li>Flexbox</li>
+      <li>API</li>
+      <li>Funções SQL</li>
+      <li>MongoDB</li>
+      <li>NodeJS</li>
+      <li>Solid e ORM</li>
+      <li>Unix & Bash</li>
+      <li>Deployment</li>
     </ul>
+  </section>
+  <footer>
+
+  </footer>
   </main>
 </body>
 </html>
