--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 
 </head>
 <body>
-  <div id="cabecalho">
+  <header id="cabecalho">
     <h1 id="titulo">Lessons Learned-Trybe</h1>
-  </div>
+    <nav>
+        <ul>
+            <li> <a href="#minha_foto">Página Inical</a></li>
+            <li> <a href="#sobre">Sobre</a></li>
+            <li> <a href="#contato">Contato</a></li>
+          </ul>
+    </nav>
+  </header>
+  <section>
   <img id="minha_foto" src="fotos/foto.portfolio.jpeg" alt="foto de perfil da Millene Galetti-mulher com cabelo longo,cor castanho,óculos de grau,blusa preta">
 <ol id="licoes_aprendidas">
   <li>Unix</li>
@@ -35,13 +43,16 @@
     <li>Node</li>
     <li>SQL</li>
 </ul>
-<article>
+</section>
+<article id="sobre">
     <p>I'm on a new journey here at Trybe, every day I face new challenges and new achievements. It's been a unique learning experience, not only about the Hard Skills that I'm developing, but also about my self-knowledge with Soft Skills.I am more motivated every day, with each new class, new lectures and new projects.So let's go Trybe!</p>
 </article>
 <aside>
     <p>Lessons Learned is my first project and it's been amazing to develop  with all the HTML and CSS knowledge I learned in 4 days! That's right! 4 days of classes and content at Trybe and I'm already managing to put it into practice. one of the most motivating moments since I started the course.</p>
 </aside>
-<a href="https://github.com/MilleneGalettiAcosta" target="_blank">Meu Github</a>
+<h2 id="contato">Contatos</h2>
+<a href="https://github.com/MilleneGalettiAcosta" target="_blank">Meu Github</a><br>
+<a href="https://www.linkedin.com/in/millene-galetti-acosta-7a0110202/" target="_blank">Linkedin</a>
 <footer id="rodape">Todos os direitos reservados,Millene Galetti</footer>
 </body>
 </html>
