--- a/index.html
+++ b/index.html
@@ -26,5 +26,18 @@
         <li>Empatia</li>
         <li>Html semântico</li>
     </ol>
+
+    <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Forms</li>
+        <li>CSS responsivo</li>
+        <li>ES6</li>
+        <li>HOF</li>
+        <li>Unit Tests</li>
+        <li>React</li>
+        <li>Node</li>
+        <li>SQL</li>
+    </ul>
 </body>
 </html>
