--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <h1>Titulo</h1>
+        <header id="cabecalho">
+            <h1 id="titulo">Titulo</h1>
         </header>
-        <img src="lucas_araujo.png" alt="minha foto">
+        <img id="minha_foto" src="lucas_araujo.png" alt="minha_foto">
     </body>
 </html>
