--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8"/>
-  <title>Portifolio de Lições</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" media="all">
-    <link rel="stylesheet" href="styles.css">
+    <title>Portifolio de Lições</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div> 
@@ -13,7 +12,22 @@
     </header>
   </div> 
   <div>
-          <img id="minha_foto" scr="minha_foto.jpeg">
-  </div>    
-    </body>
+          <img id="minha_foto" src="minha_foto.jpeg">
+  </div>  
+  <div>
+      <h2>
+        <ol id="licoes_aprendidas">
+          <li> </li>
+        </ol>
+      </h2>
+  </div>
+  <div>
+    <h2>
+      <ul id="licoes_a_aprender">
+        <li> </li>
+      </ul>
+    </h2>
+   </div>
+      
+</body>
 </html>
